# Anvil

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  build.rs
.github/workflows/: rust.yml
src/: api.rs  backup.rs  cache.rs  cli.rs  config.rs  error.rs  filters.rs  interactive.rs  lib.rs  locking.rs  main.rs  output.rs  paths.rs  scanner.rs  test_utils.rs  types.rs  updater.rs
src/gui/: app.rs  mod.rs  progress.rs  worker.rs
src/gui/tabs/: mod.rs
src/tests/: test_api.rs  test_cache.rs  test_interactive.rs  test_output.rs
tests/: backup.rs  cli.rs  config.rs  error.rs  filters.rs  locking.rs  paths.rs  scanner.rs  types.rs  updater.rs
tests/common/: helpers.rs  mocks.rs  mod.rs
