[package]
name = "anvil"
version = "0.2.0"
edition = "2024"
description = "Anvil — Minecraft mod updater. Keep your mods fresh."
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
sha1 = "0.10"
hex = "0.4"
dirs = "6"
futures = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
console = "0.15"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
url = "2"

[build-dependencies]
winres = "0.1"
